<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5"
    android:padding="20dp">

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cinzel_decorative"
        android:text="TROJAN0"
        android:textColor="#8C52FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/mainAdminIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/logoText"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:contentDescription="Profile Picture"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_android_purple_30dp" />


    <TextView
        android:id="@+id/mainAdminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainAdminIcon"
        android:layout_centerHorizontal="true"
        android:text="Welcome Admin!"
        android:textSize="32sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/browse_events_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainAdminTitle"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="20dp"
        android:background="#8C52FF"
        android:text="Browse Events"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/browse_facilities_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_events_button"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="20dp"
        android:background="#8C52FF"
        android:text="Browse Facilities"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/browse_images_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_facilities_button"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="20dp"
        android:background="#8C52FF"
        android:text="Browse Images"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/browse_profiles_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_images_button"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="20dp"
        android:background="#8C52FF"
        android:text="Browse Profiles"
        android:textColor="#FFFFFF" />
</RelativeLayout>
