...
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <GridView
        android:id="@+id/images_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:numColumns="2"
        android:horizontalSpacing="8dp"
        android:padding="8dp"
        android:verticalSpacing="8dp"
...
