...
        android:layout_height="wrap_content"
        android:text="Edit Facility"
        android:layout_marginTop="20dp"
        android:backgroundTint="#b391f8" />

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Create Event"
        android:backgroundTint="#b391f8"/>
...
